# labs

./: .gitignore  .zshrc  AGENTS.md  HANDOFF.md  Procfile  README.md  foo.txt  main.go  pod.yaml
.devcontainer/: .devcontainer.json  DEVCONTAINERS.md  Dockerfile  devcontainer.json
aws-ecs-greeter/: Makefile
bash/: tag-release.sh
bash-gpg/: passwd.txt  passwd.txt.gpg
c/: Makefile  grep.c  helloworld.c
c-learning/: Makefile  helloworld.c
elixer/: Elixir.Math.beam
go-cedar/: README.md  go-cedar  main.go
go-chat/: go.mod
go-curl/: go.mod
go-dns/: go.mod  main.go
go-echo-kickstarter/: .env  .gitignore  go.sum
go-file-checksum/: Makefile  go.mod  main.go  sha256sum
go-flags/: go.mod
go-fsnotify/: main.go
go-git/: go.mod  go.sum
go-gopattern/: go.mod  main.go
go-goslog/: go.sum  main.go
go-grpc/: Dockerfile  Makefile  README.md
go-h1/: Makefile  go.mod  go.sum  main.go
go-h2c/: README.md  go.mod  main.go  main_test.go
go-htmx-kvstore/: .air.toml  Makefile  go.mod  go.sum  main.go
go-ini-conf/: config.ini  go.mod
go-jsonpath/: go.mod  main.go
go-kademlia-protocol/: README.md  go.mod
go-leader-elect/: go.mod  go.sum  main.go
go-map-recursive-merge/: config2.yaml
go-matrix-traversal/: main.go
go-playground/: config.merged.yaml  config.yaml  config2.yaml  config3.yaml  config_merged.yaml  go.mod  go.sum  main.go
go-protobuf/: config.proto
msharran.github.com/rust/flb_filter_piimask/: Cargo.toml  fluent-bit.conf
python/realtime-chat/: .gitignore  pyproject.toml
python/realtime-chat/src/realtime_chat/: cli.py  server.py
(+744 files in other folders)
