[package]
name = "flb_filter_piimask"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/479
[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-args=-z stack-size=1500000",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.1"
chrono = "0.4"
libc = "0.2"
